# FEM-ParallelFluidAnalisis

./: .gitignore  CMakeLists.txt  README.md  build.sh
example/: a.out  image.cpp
example/3dvar/: 3dvar.tp
example/NavierStokes/: test.tp
example/NavierStokes/output/vessel/: NS_itr_0.vti  NS_itr_0_2D.vti  NS_itr_1.vti  NS_itr_1_2D.vti  NS_itr_2.vti  NS_itr_2_2D.vti  NS_itr_3.vti  NS_itr_3_2D.vti  NS_itr_4.vti  NS_itr_4_2D.vti  domain.vti  meshPartition.vti  result.vti  result_2D.vti
example/Stokes/: check_MeshPartition.vti  image.cpp  resutls.vti  resutls_2D.vti  test.tp
example/Stokes/output/vessel/: result_2D.vti
example/navierstokes/steady/: steady.tp  test.tp
example/navierstokes/unsteady/: test.tp  unsteady.tp
example/stokes/: stokes.tp
src/app/: CMakeLists.txt
src/app/Stokes/: CMakeLists.txt  main.cpp
src/app/navierstokes/: CMakeLists.txt  main.cpp
src/app/navierstokes/steady/: CMakeLists.txt  main.cpp
src/app/navierstokes/unsteady/: CMakeLists.txt  main.cpp
src/app/optimizer/: CMakeLists.txt
src/app/optimizer/3dvar/: CMakeLists.txt  main.cpp
src/app/physics/navierstokes/steady/: main.cpp
src/app/physics/navierstokes/unsteady/: main.cpp
src/app/physics/stokes/: CMakeLists.txt  main.cpp
src/app/stokes/: CMakeLists.txt  main.cpp
src/app/testPetsc/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/FEM/: CMakeLists.txt  ElementBaseFEM.cpp  ElementBaseFEM.h  FEM.cpp  FEM.h  FEMDomain.h  FEMInitialize.cpp  PrepareMatrix.cpp  ReadlnputFile.cpp  ShapeFunction.h  baseFEM.cpp  domainFEM.cpp  domainFEM.h  elementBase.cpp  elementBase.h  exportFEM.cpp  initializeFEM.cpp  mathFEM.cpp  solutionData.cpp  solutionData.h
src/lib/FEM/NavierStokes/: CMakeLists.txt  CreateMatrix_SNS.cpp  NavierStokes.cpp
src/lib/FEM/NavierStokes/steady/: CMakeLists.txt  CreateMatrix_SNS.cpp  MatrixAssemblySNS.cpp  NavierStokes.cpp  SNS copy.cpp  SteadyNavierStokes.cpp
src/lib/FEM/NavierStokes/unsteady/: CMakeLists.txt  MatrixAssemblyUSNS.cpp  UnsteadyNavierStokes.cpp
src/lib/FEM/Stokes/: CMakeLists.txt  CreateMatrix.cpp  CreateMatrixXFEM.cpp  MatrixAssemblySST.cpp  SteadyStokes.cpp  Stokes.cpp  XFEM_MatrixAssemblySST.cpp
src/lib/FEM/basefem/: BaseFEM.cpp  CMakeLists.txt  ElementBaseFEM.h  FEM.h  Gauss.h  InitializeFEM.cpp  MathFEM.h  ReadlnputFile.cpp  ShapeFunction.h
src/lib/FEM/pde/navierstokes/unsteady/: Darcy_MatrixAssemblyUSNS.cpp  UnsteadyNavierStokes.cpp  XFEM_MatrixAssemblyUSNS.cpp
src/lib/FEM/pde/stokes/: MatrixAssemblySST.cpp
src/lib/FEM/postprocess/: CMakeLists.txt  ExportFEM.cpp  PostCaluculation.cpp
src/lib/FEM/preprocess/: CMakeLists.txt  InitializeFEM.cpp  LineSDFSearch.cpp
src/lib/base/: BasicFunctions.cpp  BasicFunctions.h  CMakeLists.txt  basicFunctions.cpp  basicFunctions.h  define.h
src/lib/fem/: CMakeLists.txt
src/lib/fem/basefem/: BaseFEM.cpp  CMakeLists.txt  DomainFEM.h  ElementBaseFEM.cpp  ElementBaseFEM.h  FEM.cpp  FEM.h  Gauss.h  MathFEM.cpp  MathFEM.h  ShapeFunction.h  SolutionData.cpp  SolutionData.h  VisualizeVariables.cpp
src/lib/fem/pde/: CMakeLists.txt
src/lib/fem/pde/navierstokes/steady/: MatrixAssemblySNS.cpp  SteadyNavierStokes.cpp
src/lib/fem/pde/navierstokes/unsteady/: CMakeLists.txt  MatrixAssemblyUSNS.cpp  UnsteadyNavierStokes.cpp  XFEM_MatrixAssemblyUSNS.cpp
src/lib/fem/pde/stokes/: CMakeLists.txt  Darcy_MatrixAssemblySST.cpp  SteadyStokes.cpp  XFEM_MatrixAssemblySST.cpp
src/lib/fem/physics/navierstokes/: CMakeLists.txt
src/lib/fem/physics/navierstokes/steady/: CMakeLists.txt  Darcy_MatrixAssemblySNS.cpp  MatrixAssemblySNS.cpp  SteadyNavierStokes.cpp
src/lib/fem/physics/navierstokes/unsteady/: CMakeLists.txt  Darcy_MatrixAssemblyUSNS.cpp  MatrixAssemblyUSNS.cpp  UnsteadyNavierStokes.cpp
src/lib/fem/physics/stokes/: CMakeLists.txt  Darcy_MatrixAssemblySST.cpp  MatrixAssemblySST.cpp  SteadyStokes.cpp  XFEM_MatrixAssemblySST.cpp
src/lib/fem/postprocess/: CMakeLists.txt  ExportFEM.cpp  ExportFile.cpp  ExportFile.h  PostCaluculation.cpp  PostProcess.h  PrepareForDA.cpp
src/lib/fem/preprocess/: AllocationFEM.cpp  CMakeLists.txt  InitializeFEM.cpp  InterfacePartition.cpp  LineSDFSearch.cpp  OctreeSubDivision.cpp  PrepareMatrix.cpp  ReadlnputFile.cpp
src/lib/optimizer/: CMakeLists.txt
src/lib/optimizer/3dvar/: AdjointMatrixAssemblySNS.cpp  AdjointSteadyNavierStokes.cpp  AdjointVariableMethod.cpp  CMakeLists.txt  Darcy_AdjointMatrixAssemblySNS.cpp
src/lib/optimizer/basevar/: CMakeLists.txt  VariationalDataAssimilation.cpp  VariationalDataAssimilation.h
src/lib/optimizer/preprocess/: CMakeLists.txt  InitializeVarDA.cpp  ObservedParam.cpp  ReadInputVarDA.cpp
src/lib/postprocess/: CMakeLists.txt
src/lib/postprocess/direct/: CMakeLists.txt  ExportFEM.cpp  PostCaluculation.cpp  PrepareForDA.cpp
src/lib/preprocess/direct/: CMakeLists.txt  InterfacePartition.cpp
src/lib/solver/: CMakeLists.txt  Eigen.h  PetscSolver.cpp  PetscSolver.h  petscSolver.cpp  petscSolver.h
